package com.sunrise.dentalclinic.model;

public enum AppointmentStatus { SCHEDULED, COMPLETED, CANCELLED }
